--- a/public/style.css
+++ b/public/style.css
@@ -26,3 +26,32 @@
     color: white;
     margin-right: 20px;
   }
+
+  .row{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .remove{
+    background-color: red;
+    color: white;
+    width: 50px;
+    height: 20px;
+    line-height: 15px;
+    border-radius: 5px;
+    border: none;
+    margin-right: 10px;
+    font-weight: 500;
+  }
+
+  .add{
+    background-color: green;
+    color: white;
+    width: 50px;
+    height: 20px;
+    line-height: 15px;
+    border-radius: 5px;
+    border: none;
+    margin: 10px;
+    font-weight: 500;
+  }
